environments/prod/security.tf
resource "aws_security_group" "web" {
  name        = "prod-web-sg"
  description = "Prod EC2: SSH from developers and Github workflows, HTTP/HTTPS from anywhere"
  vpc_id      = aws_vpc.main.id

  tags = {
    Name = "${local.name_prefix}-sg"
  }
}

# Ingress rule
resource "aws_vpc_security_group_ingress_rule" "ssh_public" {
  security_group_id = aws_security_group.web.id
  ip_protocol       = "tcp"
  description       = "SSH from anywhere"
  cidr_ipv4         = "0.0.0.0/0"
  from_port         = 22
  to_port           = 22

  lifecycle {
    create_before_destroy = true
  }
}

resource "aws_vpc_security_group_ingress_rule" "http_public" {
  security_group_id = aws_security_group.web.id
  ip_protocol       = "tcp"
  description       = "HTTP from anywhere"
  from_port         = 80
  to_port           = 80
  cidr_ipv4         = "0.0.0.0/0"
}

resource "aws_vpc_security_group_ingress_rule" "https_public" {
  security_group_id = aws_security_group.web.id
  ip_protocol       = "tcp"
  description       = "HTTPS from anywhere"
  cidr_ipv4         = "0.0.0.0/0"
  from_port         = 443
  to_port           = 443
}

# Egress rule
resource "aws_vpc_security_group_egress_rule" "all_out" {
  security_group_id = aws_security_group.web.id
  ip_protocol       = "-1" # -1 means any protocol
  description       = "Allow all outbound"
  cidr_ipv4         = "0.0.0.0/0"
}
